crates/plotnik-tests/tests/04-emit/bytecode/quantifiers/one_or_more_impossible_body.txt
Q = (function_declaration
  (program)
)+ @fns
------------------ DIAGNOSTICS -------------------
error: `program` cannot be an unlabeled child of `function_declaration`
 --> query.ptk:2:4
  |
1 | Q = (function_declaration
  |      -------------------- `function_declaration` starts here
2 |   (program)
  |    ^^^^^^^
  |
help: `function_declaration` has no unlabeled children. Use its grammar fields: `body: (statement_block)`, `name: (identifier)`, `parameters: (formal_parameters)`
